--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,20 +49,17 @@ jobs:
       run: flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
       
     - name: " Initialisation CodeQL (SAST)"
-      uses: github/codeql-action/init@v2
+      uses: github/codeql-action/init@v3
       with:
         languages: python
         
     - name: " Autocomplete pour CodeQL"
       run: |
         echo "Building application for CodeQL analysis..."
-        # Cette étape aide CodeQL à analyser le code
         python -m py_compile app.py test_app.py
         
     - name: " Analyse de sécurité CodeQL"
-      uses: github/codeql-action/analyze@v2
-      with:
-        category: "/language:python"
+      uses: github/codeql-action/analyze@v3
 
   #  JOB 2 : DÉPLOIEMENT CONTINU SUR AWS
   continuous-deployment:
@@ -71,6 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     permissions:
+      security-events: write
       contents: read
       packages: write
     
@@ -78,6 +76,9 @@ jobs:
     - name: " Checkout du code"
       uses: actions/checkout@v4
       
+    - name: " Setup Docker Buildx"
+      uses: docker/setup-buildx-action@v3
+
     - name: " Connexion au GitHub Container Registry"
       uses: docker/login-action@v3
       with:
@@ -94,7 +95,6 @@ jobs:
         tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
         load: true
         cache-from: type=gha
-    # Supprimer cache-to ou utiliser une configuration différente
         
     - name: " Scan de sécurité de l'image avec Trivy"
       uses: aquasecurity/trivy-action@master
@@ -105,9 +105,10 @@ jobs:
         severity: 'CRITICAL,HIGH'
         
     - name: " Téléversement des résultats du scan Trivy"
-      uses: github/codeql-action/upload-sarif@v2
+      uses: actions/upload-artifact@v4
       with:
-        sarif_file: 'trivy-results.sarif'
+        name: trivy-scan-results
+        path: trivy-results.sarif
         
     - name: " Push de l'image sécurisée vers GHCR"
       if: success()
